2009-05-29  Michal Ludvig  <michal@logix.cz>

	* S3/Utils.py: New function replace_nonprintables()
	* s3cmd: Filter local filenames through the above function
	  to avoid problems with uploaded filenames containing invalid 
	  XML entities, eg &#08; 
	* S3/S3.py: Warn if a non-printables char is passed to
	  urlencode_string() - they should have been replaced earlier 
	  in the processing.
	* run-tests.py, TODO, NEWS: Updated.
	* testsuite/crappy-file-name.tar.gz: Tarball with a crappy-named
	  file. Untar for the testsuite.

2009-05-29  Michal Ludvig  <michal@logix.cz>

	* testsuite/blahBlah/*: Added files needed for run-tests.py

2009-05-28  Michal Ludvig  <michal@logix.cz>

	* S3/Utils.py (dateS3toPython): Be more relaxed about
	  timestamps format.

2009-05-28  Michal Ludvig  <michal@logix.cz>

	* s3cmd, run-test.py, TODO, NEWS: Added --dry-run
	  and --exclude/--include for [setacl].
	* s3cmd, run-test.py, TODO, NEWS: Added --dry-run
	  and --exclude/--include for [del].

2009-05-28  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Support for recursive [cp] and [mv], including
	  multiple-source arguments, --include/--exclude,
	  --dry-run, etc.
	* run-tests.py: Tests for the above.
	* S3/S3.py: Preserve metadata (eg ACL or MIME type) 
	  during [cp] and [mv].
	* NEWS, TODO: Updated.

2009-05-28  Michal Ludvig  <michal@logix.cz>

	* run-tests.py: Added --verbose mode.

2009-05-27  Michal Ludvig  <michal@logix.cz>

	* NEWS: Added info about --verbatim.
	* TODO: Added more tasks.

2009-05-27  Michal Ludvig  <michal@logix.cz>

	* S3/SortedDict.py: Add case-sensitive mode.
	* s3cmd, S3/S3.py, S3/Config.py: Use SortedDict() in 
	  case-sensitive mode to avoid dropping filenames
	  differing only in capitalisation
	* run-tests.py: Testsuite for the above.
	* NEWS: Updated.

2009-03-20  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: Re-sign requests before retrial to avoid 
	  RequestTimeTooSkewed errors on failed long-running
	  uploads.